feat(add): network support and plugins
